added sample parameterized routing and oath subpub

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -1,5 +1,9 @@
 <template name="Home">
-  <div class="home">
+  <!-- <div class="home">
+    {{#contentFor "breadcrumbs"}}
+      example of contentFor
+    {{/contentFor}}
     <h1>Find me in app/client/templates/home/home</h1>
-  </div>
+  </div> -->
+  {{> TodosList}}
 </template>
