--- a/app/client/templates/todos/todos_count/todos_count.scss
+++ b/app/client/templates/todos/todos_count/todos_count.scss
@@ -1,5 +1,5 @@
 /*****************************************************************************/
-/* main: Style */
+/* TodosCount: Style */
 /*****************************************************************************/
-.main {
+.todos-count {
 }
