--- a/app/client/templates/todos/todos_detail/todos_detail.scss
+++ b/app/client/templates/todos/todos_detail/todos_detail.scss
@@ -1,5 +1,5 @@
 /*****************************************************************************/
-/* Home: Style */
+/* TodosDetail: Style */
 /*****************************************************************************/
-.home {
+.todos-detail {
 }
